Added function to extract the data describing a Kaplan-Meier curve from a survfit object.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,8 +10,9 @@ Encoding: UTF-8
 LazyData: true
 URL: https://github.com/RichardBirnie/survtools
 Imports:
+    dplyr (>= 0.5.0),
     ggplot2 (>= 2.2.1),
+    flexsurv (>= 1.0.0),
     survminer (>= 0.2.4),
-    survival (>= 2.40-1),
-    flexsurv (>= 1.0.0)
+    survival (>= 2.40-1)
 RoxygenNote: 5.0.1
