--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ LazyData: true
 URL: https://github.com/RichardBirnie/survtools
 Imports:
     dplyr (>= 0.5.0),
+    purrr (>= 0.2.3),
     ggplot2 (>= 2.2.1),
     flexsurv (>= 1.0.0),
     survminer (>= 0.2.4),
